CDS: "assert(partition_size <= size()) failed: partition failed" on 32 bit JVM

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b139
    • b150

      JDK 32 bit b139 fastdebug hit assertion with huge SharedMiscCodeSize, SharedMiscDataSize, SharedReadOnlySize, SharedReadWriteSize values(e.g. (MIN+ 3 * MAX)/4 value, SharedMiscCodeSize= 1600386047) when dumping shared classes.

      64 bit version works fine(but report an error because of violated constraints).

      Example(32 bit JVM running on Linux amd64 host):
      java -Xshare:dump -XX:SharedMiscCodeSize=1600386047
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/virtualspace.cpp:211
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/scratch/workspace/9-2-build-linux-i586-phase2/jdk9/5571/hotspot/src/share/vm/memory/virtualspace.cpp:211), pid=25464, tid=25466
      # assert(partition_size <= size()) failed: partition failed
      #
      # JRE version: (9.0+139) (fastdebug build )
      # Java VM: Java HotSpot(TM) Server VM (fastdebug 9-ea+139, interpreted mode, tiered, g1 gc, linux-x86)
      # Core dump will be written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c %P" (or dumping to /home/ddmitriev/bundles/jdk-9/b139/i586/jdk-9/fastdebug/bin/core.25464)
      #
      # An error report file with more information is saved as:
      # /home/ddmitriev/bundles/jdk-9/b139/i586/jdk-9/fastdebug/bin/hs_err_pid25464.log
      ...

      hs_err_pid25464.log is attached.

      Looks like it also caused by JDK-8078644 fix.

            Assignee:
            Jiangli Zhou
            Reporter:
            Dmitry Dmitriev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: