8169870: CDS: "assert(partition_size <= size()) failed: partition failed" on 32 bit JVM

Exit the VM and report error if the second ReservedSpace() call also fails.

Reviewed-by: cjplummer, sspitsyn, iklam